--- a/CSS Files/main.css
+++ b/CSS Files/main.css
@@ -13,11 +13,12 @@
 
 .separation {
     box-shadow:6px 6px 10px -1px rgba(0, 0, 0, 0.15),
-                -6px -6px 10px -1px rgba(255, 255, 255, 0.7) ;
+                -6px -6px 10px -1px rgba(20, 19, 19, 0.7) ;
 }
 .navbar ul {
     list-style: none;
-    background-color: rgb(196, 251, 255);
+    background-color: #101c29;
+
 }
 
 .navbar ul li {
@@ -28,7 +29,7 @@
 .navbar ul li a {
     display: block;
     padding: 20px 25px;
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     text-align: center;
     font-size: 20px;
@@ -39,7 +40,7 @@
 }
 
 .navbar ul li ul.dropdown {
-    background: rgb(196, 251, 255);
+    background: #101C29;
     position: absolute;
     top: 100%;
     left: 0;
@@ -51,12 +52,14 @@
     gap: 10px;
     max-height: 400px;
     overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     
 }
 
 .navbar ul li a:hover {
-    background: rgb(197, 245, 237);
+    background: #1D1F5A;
 }
 
 .navbar ul li:hover ul.dropdown {
@@ -64,7 +67,7 @@
 }
 
 .navbar ul li ul.dropdown > li > a {
-    color: #333;
+    color: #ffffff;
     padding: 12px 20px;
     display: block;
     border-radius: 4px;
@@ -74,27 +77,120 @@
 .navbar ul li ul.dropdown > li > ul {
     padding: 10px 25px;
     margin-top: 8px;
-    background-color: rgb(196, 251, 255);
+    background-color: #101C29;
     border-radius: 6px;
 }
 
 .navbar ul li ul.dropdown > li > ul > li {
     margin-bottom: 6px;
     font-size: 14px;
-    color: #444;
+    color: #ffffff;
 }
 
 .main_course {
     text-align: center;
-    background-color: rgb(183, 238, 252);
+    background-color: #0A1C3D;
     width: 80%;
     margin: 20px auto;
     border-radius: 20px;
     padding: 8px;
     box-shadow:6px 6px 10px -1px rgba(0, 0, 0, 0.15),
-                -6px -6px 10px -1px rgba(255, 255, 255, 0.7) ;
+                -6px -6px 10px -1px rgba(53, 51, 51, 0.7) ;
+
+    color: white;
+}
+
+.no-prereq{
+  position: absolute;
+  top: 4%;
+  left: 77.5%;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #2c2c2c;
+  font-family: 'Poppins', sans-serif;
+  background-color: #3F3381;
+  padding: 8px 16px;
+  border-radius: 0.5rem;
+  box-shadow: 4px 4px 8px rgba(0,0,0,0.1),
+              -4px -4px 8px rgba(20, 20, 20, 0.5);
+  z-index: 10;
+
+  color: white;
 }
 
 
 
+#FlowChart {
+    background-color: #2868C6;
+}
 
+#Software {
+    background-color: #2868C6;
+}
+#Software ul {
+    background-color: #2868C6;
+}
+
+#Machine {
+    background-color: #2868C6;
+}
+#Machine ul {
+    background-color: #2868C6;
+}
+
+#Cyber {
+    background-color: #2868C6;
+}
+#Cyber ul {
+    background-color: #2868C6;
+}
+
+#Algorithm {
+    background-color: #2868C6;
+}
+#Algorithm ul {
+    background-color: #2868C6;
+}
+
+#hardware {
+    background-color: #2868C6;
+}
+#hardware ul {
+    background-color: #2868C6;
+}
+
+#Game {
+    background-color: #2868C6;
+}
+#Game ul {
+    background-color: #2868C6;
+}
+
+#Signal {
+    background-color: #2868C6;
+}
+#Signal ul {
+    background-color: #2868C6;
+}
+
+#Data {
+    background-color: #2868C6;
+}
+#Data ul {
+    background-color: #2868C6;
+}
+
+#System {
+    background-color: #2868C6;
+}
+#System ul {
+    background-color: #2868C6;
+}
+
+#General {
+    background-color: #2868C6;
+}
+#General ul {
+    background-color: #2868C6;
+}
